[dev] 챌린지 트러블 슈팅중 새로고침 빼고 전부 정상 작동